--- a/servidor/package.json
+++ b/servidor/package.json
@@ -16,15 +16,16 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.3",
+    "express": "^4.19.2",
     "jison": "^0.4.18",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.0",
-    "typescript": "^5.4.2"
+    "nodemon": "^3.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/morgan": "^1.9.9"
+    "@types/morgan": "^1.9.9",
+    "tsc-watch": "6.2.0",
+    "typescript": "^5.4.5"
   }
 }
